Add user stuff navigation sidebar tabs and content section

--- a/app/assets/stylesheets/navbar.ccs.scss
+++ b/app/assets/stylesheets/navbar.ccs.scss
@@ -37,8 +37,7 @@ $maingreen:#2dbe60;
   }
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #fff;
-  background-color:$maingreen;
+  color:$maingreen;
 }
 
 .navbar-default .navbar-nav {
