--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -74,6 +74,17 @@
        the content height is greater than the image height */
     background-size:cover;
     background-color:#52c286;
+    padding-top:40px;
+
+
+    p {
+      color:#fff;
+      font-size: 30px;
+    }
+
+    a {
+      color:#fff;
+    }
   }
 
   .profile-footer {
@@ -121,6 +132,37 @@
    padding:10px;
 
  }
+/*   user content  section*/
+.user-stuff-section {
+  margin-top:40px;
+
+  .left-aside{
+    min-height: 200px;
+    padding-right:10px;
+    border-top:0px;
+  }
+  .right-aside {
+    min-height: 500px;
+    padding-left:10px;
+    border-top:0px;
+
+    .suggestions{
+      background-color: #fff;
+      height:400px;
+      padding:11px;
+
+      p{ padding:5px;}
+    }
+
+  }
+
+  .content-wrapper {
+    min-height: 800px;
+    background-color: #fff;
+    padding:11px;
+    border-top:none;
+  }
+}
 
 .aside-user-menu{
   height:auto;
@@ -231,6 +273,98 @@ aside h3 {
   }
 }
 
+
+
+/*  user's stuff tab */
+div.mystuff-tab-container{
+  z-index: 10;
+  background-color: #ffffff;
+  padding: 0 !important;
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  margin-top: 20px;
+  margin-left: 50px;
+  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  -moz-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  background-clip: padding-box;
+  opacity: 0.97;
+  filter: alpha(opacity=97);
+}
+div.mystuff-tab-menu{
+  padding-right: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+}
+div.mystuff-tab-menu div.list-group{
+  margin-bottom: 0;
+}
+div.mystuff-tab-menu div.list-group>a{
+  margin-bottom: 0;
+}
+div.mystuff-tab-menu div.list-group>a .glyphicon,
+div.mystuff-tab-menu div.list-group>a .fa {
+  color: #2dbe60;
+}
+div.mystuff-tab-menu div.list-group>a:first-child{
+  border-top-right-radius: 0;
+  -moz-border-top-right-radius: 0;
+}
+div.mystuff-tab-menu div.list-group>a:last-child{
+  border-bottom-right-radius: 0;
+  -moz-border-bottom-right-radius: 0;
+}
+div.mystuff-tab-menu div.list-group>a.active,
+div.mystuff-tab-menu div.list-group>a.active .glyphicon,
+div.mystuff-tab-menu div.list-group>a.active .fa {
+  background-color: #2dbe60;
+  background-image: #ffffff;
+  color: #ffffff;
+}
+
+.list-group-item.active,
+.list-group-item.active:hover,
+.list-group-item.active:focus {
+  z-index: 2;
+  color: white;
+  background-color: #fff;
+  border-color: #dddddd ;
+
+
+}
+
+div.mystuff-tab-menu div.list-group-item.active,
+div.mystuff-tab-menu div.list-group-item.active:hover,
+div.mystuff-tab-menu div.list-group-item.active:focus {
+  z-index: 2;
+  color: white;
+  background-color: #fff;
+  background-image: #fff;
+  border-color:#dddddd ;
+}
+div.mystuff-tab-menu div.list-group>a.active:after{
+  content: '';
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  margin-top: -13px;
+  border-left: 0;
+  border-bottom: 13px solid transparent;
+  border-top: 13px solid transparent;
+  border-left: 10px solid #2dbe60;
+}
+
+div.mystuff-tab-content{
+  /* border: 1px solid #eeeeee; */
+  padding-left: 5px;
+  padding-top: 5px;
+
+  p { padding:5px;}
+}
+
+div.mystuff-tab div.mystuff-tab-content:not(.active){
+  display: none;
+}
 
 
 
