Make the user profile responsive

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -140,11 +140,11 @@
     min-height: 200px;
     padding-right:10px;
     border-top:0px;
+    margin-top:5px;
   }
   .right-aside {
     min-height: 500px;
-    padding-left:10px;
-    border-top:0px;
+    margin-top: 5px;
 
     .suggestions{
       background-color: #fff;
@@ -161,6 +161,7 @@
     background-color: #fff;
     padding:11px;
     border-top:none;
+    margin-top:5px;
   }
 }
 
