style courses index page

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -73,7 +73,7 @@
     /* Makes the image fixed in the viewport so that it doesn't move when
        the content height is greater than the image height */
     background-size:cover;
-    background-color:#52c286;
+    background-color:#464646;
     padding-top:40px;
 
 
