--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,6 +1,9 @@
+
+/* users index page*/
 .all-users {
   background-color: #fff;
   padding:20px;
+  border-radius:3px;
 
   img {
     margin:10px;
@@ -26,3 +29,12 @@
     width:100px;
   }
 }
+
+
+
+
+
+
+
+
+
