--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,23 +1,29 @@
-<h1>Listing courses</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @courses.each do |course| %>
-      <tr>
-        <td><%= link_to course.name, organization_course_path(course.instructor.organization, course) %></td>
-        <td><%= link_to 'Edit', edit_organization_course_path(course.instructor.organization, course) %></td>
-        <td><%= link_to 'Destroy', organization_course_path(course.instructor.organization, course), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Course', new_organization_course_path %>
+<div class ="container">
+  <h1 class="text-center">Courses</h1>
+  <hr>
+  <div class="row">
+    <div class=" col-md-3 col-sm-12 col-xs-12">
+      <div class="search-course">
+        Filter search
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-12 col-xs-12 all-courses">
+        <% @courses.each do |course| %>
+        <div class="row">
+          <div class="course-content col-md-6 col-sm-12 col-xs-12">
+            <h3 class="" ><%=link_to "#{course.name}", organization_course_path(course.organization, course.id) %></h3>
+           <p>by <%=link_to "#{course.organization.name}",organization_path(course.organization) %></p>
+          </div>
+          <div class="course-info col-md-3 col-sm-6 col-xs-12">
+            <p>300 Learners </p>
+            <p>10 teams</p>
+          </div>
+          <div class="course-action col-md-3">
+            <a href="" class="btn btn-primary">Join</a>
+          </div>
+        </div>
+        <hr>
+       <%end%>
+    </div>
+  </div>
+</div>
