--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -39,3 +39,42 @@
   border-radius:3px;
   background-color:#fff;
 }
+
+.course-header {
+  height:300px;
+  background:#464646;
+
+  h1 {
+    color:#fff;
+    text-align:center;
+    font-weight:400px;
+    margin-top:100px;
+  }
+}
+
+.discussion-board {
+  margin-top:20px;
+  background-color:#fff;
+  border:5px;
+  height:400px;
+}
+
+.course-meetup-menu{
+  height:200px;
+  margin-top:20px;
+  padding:20px;
+  background-color:#fff;
+
+
+}
+.course-meetup-suggestion {
+  height:200px;
+  margin-top:20px;
+  padding:20px;
+  background-color:#fff;
+
+}
+
+
+
+
