--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,3 +1,27 @@
 <p id="notice"><%= notice %></p>
+<div class="course-wrapper container-fluid">
+  <div class="row">
+    <div class="col-lg-12 course-header">
+      <h1><%= @course.name %></h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-3">
+      <div class="course-meetup-menu">
+        <h1>Menu</h1>
+      </div>
+    </div>
+    <div class="col-lg-6 ">
+      <div class="discussion-board">
+        <h1>Discussions</h1>
+      </div>
 
+    </div>
+    <div class="col-lg-3">
+      <div class="course-meetup-suggestion">
+        suggestions
+      </div>
+    </div>
+  </div>
+</div>
 
