--- a/app/views/users/_side_tab_menu.html.erb
+++ b/app/views/users/_side_tab_menu.html.erb
@@ -1,5 +1,8 @@
 <div class="list-group">
-  <a href="#" class="list-group-item active text-center">
+<a href="#" class="list-group-item active text-center">
+    <h4 class="fa fa-book"></h4><br/>About
+  </a>
+  <a href="#" class="list-group-item text-center">
     <h4 class="fa fa-book"></h4><br/>Courses
   </a>
   <a href="#" class="list-group-item text-center">
