--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
       <%= devise_error_messages! %>
       <div class="form-group">
-        <div class"text-center"><%= f.label "Change Avatar" %>
+        <div class""><%= f.label "Change Avatar" %>
           <div class="file"><%= f.file_field :avatar %></div>
         </div>
       </div>
@@ -59,8 +59,37 @@
         </div>
       </div>
 
-      <h4 class="text-center"> Change Your profile Info </h4>
+      <h4 class=""> Change Your profile Info </h4>
 
+      <div class="form-group">
+        <%= f.label :about, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+          <%= f.text_area :about, class: 'form-control'  %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :interests, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+          <%= f.text_area :interests, class: 'form-control'  %>
+        </div>
+      </div>
+      <h4 class=""> Professional Experience </h4>
+      <div class="form-group">
+        <%= f.label :interests, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+          <%= f.text_area :interests, class: 'form-control'  %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :about, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-6">
+          <%= f.text_area :about, class: 'form-control'  %>
+        </div>
+      </div>
+
+
+      <h4 class=""> Education </h4>
       <div class="form-group">
         <%= f.label :about, class: 'col-sm-2 control-label'  %>
         <div class="col-sm-6">
