--- a/app/views/user_posts/_comment.html.erb
+++ b/app/views/user_posts/_comment.html.erb
@@ -1,12 +1,12 @@
 <%if post.post_comments.any?%>
   <div class="comments-details row">
     <ul id="comment-for-post">
-      <% post.post_comments.order(created_at: :desc) do |comment| %>
+      <% post.post_comments.each do |comment| %>
         <li>
           <aside class="commenter-image">
-            <%=link_to (image_tag post.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(current_user) %>
+            <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
           </aside>
-            <%=link_to "#{comment.user.first_name} #{comment.user.last_name}", user_path(@user) %>
+            <%=link_to "#{comment.user.full_name}", user_path(@user) %>
             <div class="time">posted on <%=post.created_at.strftime("%B %d, %Y, %I:%M %p ") %></div>
             <div class="description"><%=comment.body%></div>
         </li>
