--- a/app/views/users/_stats_right.html.erb
+++ b/app/views/users/_stats_right.html.erb
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col-md-6 item" id="followers">
       <div class="row">
-        <p class="numbers"><span class="label label-default ">250</span>
+        <p class="numbers"><span class="label label-default ">
+        <%= link_to user.followers.count, followers_user_path(user) %></span>
       </div>
       <div class="row">
         <h1 class="text">Followers</h1>
@@ -10,7 +11,8 @@
     </div>
     <div class="col-md-6 item" id="following">
       <div class="row">
-        <p class="numbers"><span class="label label-default ">124</span></p>
+        <p class="numbers"><span class="label label-default ">
+        <%=link_to user.following_users.count, following_user_path(user)%></span></p>
       </div>
       <div class="row">
         <h1 class="text">Following</h1>
@@ -21,10 +23,12 @@
     <div class="col-md-12 special-item">
       <div class="content2 col-md-12">
         <div class="row">
-          <p class="numbers"><span class="label label-success ">300</span></p>
+          <p class="numbers"><span class="label label-success ">
+            <%=link_to user.user_posts.count, user_posts_path(user)%>
+          </span></p>
         </div>
         <div class="row">
-          <h1 class="text">Contributions</h1>
+          <h1 class="text">Posts</h1>
         </div>
       </div>
     </div>
