--- a/app/views/user_posts/_post.html.erb
+++ b/app/views/user_posts/_post.html.erb
@@ -11,7 +11,16 @@
         </div>
 
       </div>
-      <div class="post-body panel-body"><%= post.description %>
+      <div class="post-body panel-body">
+        <p><%= post.description %></p>
+      </div>
+
+      <div ng-controller="PostCommentController">
+        <form ng-submit="savePostComment(postComment)">
+          <input ng-model="postComment.body">
+          <span ng-init="userPostId = <%= post.id %>"></span>
+          <button type='submit'>send</button>
+        </form>
       </div>
 
       <div class="post-comments">
