--- a/app/views/users/_side_tab_menu.html.erb
+++ b/app/views/users/_side_tab_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="list-group">
 <a href="#" class="list-group-item active text-center">
-    <h4 class="fa fa-book"></h4><br/>About
+    <h4 class="fa fa-book"></h4><br/>Posts
   </a>
   <a href="#" class="list-group-item text-center">
     <h4 class="fa fa-book"></h4><br/>Courses
@@ -15,6 +15,6 @@
     <h4 class="fa fa-star"></h4><br/>Favorites
   </a>
   <a href="#" class="list-group-item text-center">
-    <h4 class="glyphicon glyphicon-credit-card"></h4><br/>Posts
+    <h4 class="glyphicon glyphicon-credit-card"></h4><br/>About
   </a>
 </div>
