--- a/app/views/user_posts/_comments.html.erb
+++ b/app/views/user_posts/_comments.html.erb
@@ -1,14 +1,15 @@
 <%if post.post_comments.any?%>
   <div class="comments-details row">
-    <ul id="comment-for-post">
+    <ul id="comment-for-post-<%= post.id %>">
       <% post.post_comments.each do |comment| %>
-        <li>
+        <li id="comment-<%= comment.id %>">
           <aside class="commenter-image">
             <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
           </aside>
-            <%=link_to "#{comment.user.full_name}", user_path(@user) %>
-            <div class="time">posted on <%=post.created_at.strftime("%B %d, %Y, %I:%M %p ") %></div>
-            <div class="description"><%=comment.body%></div>
+            <%=link_to "#{comment.user.full_name}", user_path(user) %>
+          <div class="time">posted on <%=comment.created_at.strftime("%B %d, %Y, %I:%M %p ") %>
+          </div>
+          <div class="description"><%=comment.body%></div>
         </li>
       <%end%>
     </ul>
