--- a/app/views/user_posts/_new_comment.html.erb
+++ b/app/views/user_posts/_new_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="comments row">
-  <%= bootstrap_form_for [user_post, PostComment.new], html: {class: 'comment-form'} do |f| %>
+  <%= bootstrap_form_for [user_post, PostComment.new], remote: true,  html: {class: 'comment-form'} do |f| %>
   <div class="commenting">
     <div class="input-append pull-left col-md-8">
       <%= f.text_field :body, hide_label: true, size: "",required: true, placeholder: "Add a comment here" %>
