--- a/app/assets/stylesheets/user_post.css.scss
+++ b/app/assets/stylesheets/user_post.css.scss
@@ -18,7 +18,6 @@
   .post-comments {
     margin-top:10px;
     width:100%;
-    padding:10px;
     background-color:#fff;
   }
 
@@ -30,15 +29,33 @@
   }
   .panel-default > .panel-heading {
     color: #333333;
-    background-color: #fff;
+    background-color: whitesmoke;
     border-color: #dddddd;
   }
 }
 
 .post-comments {
-  padding-left:10px;
-  padding-top:10px;
+  padding-left:0px;
+  padding-top:0px;
+
   color: #333333;
-  //background-color: whitesmoke;
   border-color: #dddddd;
 }
+
+.list-inline {
+  background:#e2e2e2;
+  height:30px;
+  padding:5px;
+}
+
+
+  .description {
+    padding:10px;
+    border:1px solid;
+    border-color: #dddddd;
+    border-radius:5px;
+  }
+
+
+
+
