--- a/app/views/post_comments/_comment.html.erb
+++ b/app/views/post_comments/_comment.html.erb
@@ -1,9 +1,13 @@
-<li id="comment-<%= comment.id %>">
-  <aside class="commenter-image">
-  <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
-  </aside>
-  <%=link_to "#{comment.user.full_name}", user_path(user) %>
-  <div class="time">posted on <%=comment.created_at.strftime('%B %d, %Y, %I:%M %p ') %>
+<li id="comment-<%= comment.id %>" class="acomment">
+  <div class="row">
+    <div class="commenter-image col-md-3 text-center">
+      <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
+      <%=link_to "#{comment.user.full_name}", user_path(user), class: "row" %>
+    </div>
+    <div class="col-md-8">
+    <div class="row time"><%=comment.created_at.strftime("%B %d, %Y, %I:%M %p ") %></div>
+     <div class="description row"><%=comment.body%></div>
+    </div>
   </div>
-  <div class="description"><%=comment.body%></div>
 </li>
+<hr>
