--- a/app/views/user_posts/edit.html.erb
+++ b/app/views/user_posts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing user_post</h1>
+<div class="container text-center">
+  <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @user_post %> |
-<%= link_to 'Back', user_posts_path %>
+  <%= link_to 'Show', @user_post %> |
+  <%= link_to 'Back', user_posts_path %>
+</div>
