--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,5 +1,8 @@
 body {
   background-color:#EBEBEB;
+  font-family: Georgia,Times,"Times New Roman",serif;
+  font-size: 15px;
+  line-height: 1.4;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -25,4 +28,7 @@ ul li {
   text-decoration: none;
   list-style-type: none;
 }
+
+.pull-right {text-align: right}
+.pull-left {text-align: left}
 
