--- a/app/views/user_posts/_form.html.erb
+++ b/app/views/user_posts/_form.html.erb
@@ -1,17 +1,26 @@
-<%= bootstrap_form_for(@user_post) do |f| %>
-  <% if @user_post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user_post.errors.count, "error") %> prohibited this user_post from being saved:</h2>
 
-      <ul>
-      <% @user_post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="row edit form">
+  <div class="panel panel-default col-md-12">
+    <div class="post-header panel-heading row">
+      <%= bootstrap_form_for(@user_post, remote: true) do |f| %>
+        <% if @user_post.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@user_post.errors.count, "error") %> prohibited this user_post from being saved:</h2>
+
+            <ul>
+            <% @user_post.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+      <%= f.text_area :description, class: "post-body panel-body" %>
+        <div class="actions">
+          <%= f.submit "update post" %>
+          <span class="btn btn-primary"> Cancel</span>
+        </div>
       <% end %>
-      </ul>
     </div>
-  <% end %>
-  <%= f.text_area :description %>
-  <div class="actions">
-    <%= f.submit %>
   </div>
-<% end %>
+</div>
