--- a/app/views/user_posts/_post.html.erb
+++ b/app/views/user_posts/_post.html.erb
@@ -1,15 +1,18 @@
 
 <% user.user_posts.order(created_at: :desc).each do |post| %>
   <div class="posts-area col-md-12">
-    <div class="post-wrapper panel panel-default">
+    <div class="post-wrapper panel panel-default" id="current-feed-post-<%=post.id%>">
       <div class="post-header panel-heading row">
         <div class="image-for-poster col-md-2  text-center"><%=link_to (image_tag post.user.avatar.url(:thumb), class: "img-circle ", size:'50x50'), user_path(post.user) %>
         </div>
-        <div class="col-md-10 col-sm-8 col-xs-12">
+        <div class="col-md-8 col-sm-12 col-xs-12">
           <div class="user-name"><%= link_to "#{post.user.full_name}", user_path(post.user) %></div>
           <div class="time">posted on <%=post.created_at.strftime("%B %d, %Y, %I:%M %p") %></div>
         </div>
-
+        <div class="col-md-2 pull-right post-actions" >
+          <%=link_to "", edit_user_post_path(post.id),remote: true,  class: "fa fa-pencil fa-fw" %>
+          <%=link_to "", user_post_path(post.id),remote: true, method: :delete, confirm: "Are you sure?", class: "fa fa-times" %>
+        </div>
       </div>
       <div class="post-body panel-body">
         <p><%= post.description %></p>
@@ -18,7 +21,8 @@
       <div class="post-comments">
         <ul class="list-inline">
           <li><span class="add-comment"><span><i class="glyphicon glyphicon-plus-sign"></i> comment </a></li>
-          <li><i class="glyphicon glyphicon-comment"></i> <%=post.post_comments.count%> comments</li>
+          <li><i class="glyphicon glyphicon-comment"></i>
+          <span id="count-comments-<%= post.id %>"><%=post.post_comments.count%></span> comments</li>
           <li><i class="glyphicon glyphicon-star"></i>favorites</li>
           <li><i class="glyphicon glyphicon-thumbs-up"></i> Likes</li>
         </ul>
