--- a/app/views/user_posts/_new_comment.html.erb
+++ b/app/views/user_posts/_new_comment.html.erb
@@ -5,7 +5,7 @@
       <%= f.text_field :body, hide_label: true, size: "",required: true, placeholder: "Add a comment here" %>
     </div>
     <div class="button pull-left">
-      <%= f.submit "Comment", class: "comment_button btn btn-default btn-large", size: '10x10' %>
+      <%= f.submit "Comment", class: "comment_button btn btn-success", size: '10x10' %>
     </div>
   </div>
   <%end%>
