--- a/app/views/post_comments/_form.html.erb
+++ b/app/views/post_comments/_form.html.erb
@@ -1,17 +1,24 @@
-<%= form_for(@post_comment) do |f| %>
-  <% if @post_comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post_comment.errors.count, "error") %> prohibited this post_comment from being saved:</h2>
 
-      <ul>
-      <% @post_comment.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="row edit form">
+    <div class="post-header panel-heading row">
+      <%= bootstrap_form_for([user_post, @post_comment], remote: true) do |f| %>
+        <% if @post_comment.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@post_comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+
+            <ul>
+            <% @post_comment.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+      <%= f.text_area :body, label: { text: "Edit description"}, class: "post-body panel-body" %>
+        <div class="actions">
+          <%= f.submit "Done", class: "btn btn-success" %>
+        </div>
       <% end %>
-      </ul>
     </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
+<hr>
