--- a/app/views/user_posts/_comments.html.erb
+++ b/app/views/user_posts/_comments.html.erb
@@ -1,22 +1,30 @@
-<%if post.post_comments.any?%>
-  <div class="comments-details row">
-    <ul id="comment-for-post-<%= post.id %>">
-      <% post.post_comments.each do |comment| %>
-        <li id="comment-<%= comment.id %>" class="acomment">
-          <div class="row">
-            <div class="pull-left block commenter-image circle">
-              <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
-            </div>
-            <span><%=link_to "#{comment.user.full_name}", user_path(user), class: "row" %></span>
-            <div class="col-md-12 pull-left">
-             <div class="description row"><%=comment.body%></div>
-             <div class="row time"><%=comment.created_at.strftime("%B %d, %Y, %I:%M %p ") %></div>
-            </div>
-          </div>
-        </li>
-        <hr>
-      <%end%>
-    </ul>
-  </div>
 
-<%end%>
+<div class="comments-details row">
+  <ul id="comment-for-post-<%= post.id %>">
+    <% post.post_comments.each do |comment| %>
+      <li id="comment-<%= comment.id %>" class="acomment">
+        <div class="row">
+        <div class="col-md-10">
+          <div class="pull-left block commenter-image circle">
+            <%=link_to (image_tag comment.user.avatar.url(:thumb), class: "img-circle ", size:'40x40'), user_path(comment.user) %>
+          </div>
+          <span><%=link_to "#{comment.user.full_name}", user_path(user), class: "row" %></span>
+          </div>
+          <%if comment.user == current_user %>
+            <div class="col-md-2 pull-right comment-actions">
+              <%=link_to "", edit_user_post_post_comment_path(post.id, comment.id),remote: true, class: "fa fa-pencil fa-fw", title: "delete comment" %>
+              <%=link_to "", user_post_post_comment_path(comment.user_post, comment.id), remote: true,  method: :delete, data: {confirm: "Are you sure you want delete this comment?"}, class: "fa fa-trash error alert", title: "delete comment" %>
+            </div>
+          <%end%>
+          <div class="col-md-12 pull-left">
+           <div class="description row"><%=comment.body%></div>
+           <div class="row time"><%=comment.created_at.strftime("%B %d, %Y, %I:%M %p ") %></div>
+          </div>
+
+        </div>
+        <hr>
+      </li>
+    <%end%>
+  </ul>
+</div>
+
