--- a/app/views/user_posts/_form.html.erb
+++ b/app/views/user_posts/_form.html.erb
@@ -1,28 +1,26 @@
 
 <div class="row edit form">
-  <div class="panel panel-default col-md-12">
-    <div class="post-header panel-heading row">
-      <%= bootstrap_form_for(@user_post, remote: true) do |f| %>
-        <% if @user_post.errors.any? %>
-          <div id="error_explanation">
-            <h2><%= pluralize(@user_post.errors.count, "error") %> prohibited this user_post from being saved:</h2>
+  <div class="post-header panel-heading row">
+    <%= bootstrap_form_for(@user_post, remote: true) do |f| %>
+      <% if @user_post.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@user_post.errors.count, "error") %> prohibited this user_post from being saved:</h2>
 
-            <ul>
-            <% @user_post.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-            </ul>
-          </div>
-        <% end %>
-
-      <%= f.text_area :description, label: { text: "Edit description"}, class: "post-body panel-body" %>
-        <div class="actions">
-          <%= f.submit "update post" %>
-          <span>
-          <%=link_to "Cancel", user_post_path(@user_post), remote: true, class: "btn btn-primary" %>
-          </span>
+          <ul>
+          <% @user_post.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
         </div>
       <% end %>
-    </div>
+
+    <%= f.text_area :description, label: { text: "Edit description"}, class: "post-body panel-body" %>
+      <div class="actions">
+        <%= f.submit "Update", class: "btn btn-success" %>
+        <span>
+        <%=link_to "Cancel", user_post_path(@user_post), remote: true, class: "btn btn-default" %>
+        </span>
+      </div>
+    <% end %>
   </div>
 </div>
