--- a/app/views/user_posts/_post.html.erb
+++ b/app/views/user_posts/_post.html.erb
@@ -1,7 +1,7 @@
 
 <% user.user_posts.order(created_at: :desc).each do |post| %>
-  <div class="posts-area col-md-12">
-    <div class="post-wrapper panel panel-default" id="current-feed-post-<%=post.id%>">
+  <div class="posts-area col-md-12" id="current-feed-post-<%=post.id%>">
+    <div class="post-wrapper panel panel-default">
       <div class="post-header panel-heading row">
         <div class="image-for-poster col-md-2  text-center"><%=link_to (image_tag post.user.avatar.url(:thumb), class: "img-circle ", size:'50x50'), user_path(post.user) %>
         </div>
@@ -9,10 +9,12 @@
           <div class="user-name"><%= link_to "#{post.user.full_name}", user_path(post.user) %></div>
           <div class="time">posted on <%=post.created_at.strftime("%B %d, %Y, %I:%M %p") %></div>
         </div>
-        <div class="col-md-2 pull-right post-actions" >
-          <%=link_to "", edit_user_post_path(post.id),remote: true,  class: "fa fa-pencil fa-fw" %>
-          <%=link_to "", user_post_path(post.id),remote: true, method: :delete, confirm: "Are you sure?", class: "fa fa-times" %>
-        </div>
+        <%if post.user == current_user %>
+          <div class="col-md-2 pull-right post-actions" >
+            <%=link_to "", edit_user_post_path(post.id),remote: true,  class: "fa fa-pencil fa-fw" %>
+            <%=link_to "", user_post_path(post.id), remote: true,  method: :delete, data: {confirm: "Are you sure u want to delete this post?"}, class: "fa fa-times" %>
+          </div>
+        <%end%>
       </div>
       <div class="post-body panel-body">
         <p><%= post.description %></p>
