all users to toggle existing comments per post  and new comment

--- a/app/views/post_comments/_form.html.erb
+++ b/app/views/post_comments/_form.html.erb
@@ -14,7 +14,7 @@
           </div>
         <% end %>
 
-      <%= f.text_area :body, label: { text: "Edit description"}, class: "post-body panel-body" %>
+      <%= f.text_area :body, label: { text: "Edit description"}, class: "post-body panel-body", contenteditable: true %>
         <div class="actions">
           <%= f.submit "Done", class: "btn btn-success" %>
         </div>
