--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,14 +8,14 @@
       <div class="form-group">
         <%= f.label :first_name, class: "col-sm-2 control-label" %>
         <div class="col-sm-6">
-          <%= f.email_field :last_name, class: "form-control" %>
+          <%= f.text_field :last_name, class: "form-control" %>
         </div>
       </div>
 
       <div class="form-group">
         <%= f.label :last_name, class: "col-sm-2 control-label" %>
         <div class="col-sm-6">
-          <%= f.email_field :last_name, class: "form-control" %>
+          <%= f.text_field :last_name, class: "form-control" %>
         </div>
       </div>
 
