add functionality to upvote a post using ajax and rails

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -32,3 +32,7 @@ ul li, a {
 .pull-right {text-align: right}
 .pull-left {text-align: left}
 
+a {
+  background: transparent;
+  text-decoration: none;
+}
