add ability for a user to upvote a post or remove a vote from a post

--- a/app/assets/stylesheets/user_post.css.scss
+++ b/app/assets/stylesheets/user_post.css.scss
@@ -22,7 +22,7 @@
     margin-left:0px;
   }
   .panel-default > .panel-heading {
-    color: #333333;
+    color: #C3BFBF;
     background-color:whitesmoke;
     border-color: #dddddd;
   }
