--- a/app/views/post_comments/_count_comments.html.erb
+++ b/app/views/post_comments/_count_comments.html.erb
@@ -1,1 +1,3 @@
-<span id="count-comments-<%= post.id %>"><%=post.post_comments.count%></span>
+
+  <a class="count-comments" id="count-comments-<%= post.id %>" data-comment="<%= post.id %>"><%=post.post_comments.count%> comments</a>
+
