--- a/app/views/upvotes/create.js.erb
+++ b/app/views/upvotes/create.js.erb
@@ -1,3 +1,12 @@
-var postTarget = $("#count-upvotes-<%= @upvote.user_post.id %>")
-  postTarget.html("<%= j(render partial: 'upvotes/count_upvotes',
-    locals: {post: @upvote.user_post})%>");
+
+var targetUpvoteForm = $("#upvote-btn-<%= @upvote.user_post.id %>")
+var upvoteTarget = $("#count-upvotes-<%= @upvote.user_post.id %>")
+
+targetUpvoteForm.html("<%= j(render partial: 'upvotes/remove_vote',
+  locals: {
+    post: @upvote.user_post,
+    upvote: @upvote
+  })%>")
+
+upvoteTarget.html("<%= j(render partial: 'upvotes/count_upvotes',
+  locals: {post: @upvote.user_post})%>");
